--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,5 @@
 world:
-  worldName: world
+  worldName: IceKart
   spawnHeight: 301.0
 game:
   countDownLength: 10
@@ -18,6 +18,7 @@ generation:
   turnZoneEnd: 100.0
   lengthScale: 40.0
 items:
+  disableCraftingSecret: false
   levitationItems: 4
   levitationBoxWeight: 0
   levitationDuration: 100
