moved item behaviours into Items class instead of ItemListener, items are now more centralised to allow for custom name/lore to work

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -22,6 +22,8 @@ items:
   levitationItems: 4
   levitationBoxWeight: 0
   levitationDuration: 100
+  levitationName: "Levitation"
+  levitationDescription: "Drop to blah blah\nnewline"
   teleporterItems: 5
   teleporterBoxWeight: 0
   blindnessItems: 0
